--- a/web/assets/css/offlinerSignIn.css
+++ b/web/assets/css/offlinerSignIn.css
@@ -1,7 +1,7 @@
 @import "bootstrap-responsive.min.css";
 @import "../fonts/fonts.css";
 body{
-    font-family: Entypo;
+    font-family: Tahoma, Geneva, sans-serif;
     padding-top: 80px;
     overflow-y: scroll;
 }
