--- a/web/assets/fonts/fonts.css
+++ b/web/assets/fonts/fonts.css
@@ -1,14 +1,20 @@
 @font-face {
-	font-family: 'Entypo';
+	font-family: Entypo;
+    src: url('entypo.eot');
 	src: url('entypo.eot?#iefix') format('embedded-opentype'),
 		url('entypo.woff') format('woff'),
 		url('entypo.ttf') format('truetype'),
 		url('entypo.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 @font-face {
-    font-family: 'EntypoSocial';
+    font-family: EntypoSocial;
+    src: url('entypo-social.eot');
     src: url('entypo-social.eot?#iefix') format('embedded-opentype'),
     url('entypo-social.woff') format('woff'),
     url('entypo-social.ttf') format('truetype'),
     url('entypo-social.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
