--- a/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
+++ b/src/Thumbtack/OfflinerBundle/Resources/views/Default/welcome.html.twig
@@ -98,7 +98,7 @@
                 </tab-heading>
                 <div class="page-content">
                  <h4>Thank you for anything
-                 <p> Create yours apps with us!
+                 <p> Create your apps with us!
                  </h4>
                 <a href="logout"><button class="btn btn-large btn-success">Goodbye!!!</button></a>
                 </div>
