--- a/web/assets/css/offlinerSignIn.css
+++ b/web/assets/css/offlinerSignIn.css
@@ -409,6 +409,7 @@ body{
     font-size: 0.92em;
     text-transform: lowercase;
     display: inline-block;
+    padding-bottom: 7px;
 }
 
 .stats-count {
