--- a/app/Resources/views/layoutSignIn.html.twig
+++ b/app/Resources/views/layoutSignIn.html.twig
@@ -10,7 +10,7 @@
     <!-- Le styles -->
     <link href="{{  asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{  asset('assets/css/offlinerSignIn.css') }}" rel="stylesheet">
-
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <!-- Fav and touch icons -->
     <link rel="shortcut icon" href="{{ asset('assets/ico/favicon.ico') }}">
     {% block stylesheets %}{% endblock %}
